--- a/src/main/resources/templates/policy/index.html
+++ b/src/main/resources/templates/policy/index.html
@@ -68,12 +68,12 @@
             <!-- Policy Section -->
             <div class="policy-title" onclick="toggleContent(this)">
                 <h3 th:text="${policy}">정책 제목</h3>
-                <span class="toggle-button">
+                <span class="toggle-button" style="display: none;">
                     <img th:src="@{/images/policy/plus.png}" alt="펼치기" class="toggle-icon" />
                 </span>
             </div>
             <div class="policy-content" style="display: none;">
-                <p th:utext="${policyDetail}" style="white-space: pre-wrap;"></p>  <!-- 정책 내용 출력 -->
+                <p th:utext="${policyDetail}" style="white-space: pre-wrap;"></p> <!-- 정책 내용 출력 -->
             </div>
 
             <!-- 스크롤 최상단 버튼 -->
