--- a/src/main/resources/templates/myPage/content/qna.html
+++ b/src/main/resources/templates/myPage/content/qna.html
@@ -8,7 +8,7 @@
         <!--문의하기 출력-->
 
         <!--문의하기가 있을떄-->
-        <h3>나의리뷰</h3>
+        <h3>문의하기</h3>
         <table border="0" class="widthtable">
             <tr>
                 <th>번호</th>
