--- a/src/main/resources/templates/user/registerSeller.html
+++ b/src/main/resources/templates/user/registerSeller.html
@@ -19,49 +19,55 @@
             <table border="0" class="heighttable">
                 <tr>
                     <th>아이디</th>
-                    <td><input type="text"> 영문, 숫자 4~12자 설정</td>
+                    <td>
+                        <input type="text" name="uid" placeholder="아이디 입력"/> 영문, 숫자 4~12자 설정
+                        <button type="button" id="btnCheckUid" name="uidbtn" data-type="uid" class="infobutton">중복확인</button>
+                        <span class="resultId"></span>
+                    </td>
                 </tr>
                 <tr>
-                    <th>비밀번호</th>
-                    <td><input type="password"> 영문, 숫자, 특수문자 8~12자 설정</td>
+                    <th>비밀번호<span class="required">*</span></th>
+                    <td><input type="password" name="pass"> 영문, 숫자, 특수문자 8~12자 설정</td>
                 </tr>
                 <tr>
                     <th>비밀번호 확인</th>
-                    <td><input type="password"></td>
+                    <td><input type="password" name="pass2">
+                        <span class="resultPass"></span>
+                    </td>
                 </tr>
             </table>
             <br>
             <table border="0" class="heighttable">
                 <tr>
                     <th>회사명</th>
-                    <td><input type="text" placeholder="상호명입력예 ) (주)"/></td>
+                    <td><input type="text" name="shop_name" placeholder="상호명입력예 ) (주)"/></td>
                 </tr>
                 <tr>
                     <th>대표</th>
-                    <td><input type="text" placeholder="이름입력"/></td>
+                    <td><input type="text" name="representative" placeholder="이름입력"/></td>
                 </tr>
                 <tr>
                     <th>사업자등록번호</th>
-                    <td><input type="text" placeholder="사업자등록번호입력"/> - 포함 12 자리 입력</td>
+                    <td><input type="text" name="business_registration" placeholder="사업자등록번호입력"/> - 포함 12 자리 입력</td>
                 </tr>
                 <tr>
                     <th>통신판매업번호</th>
-                    <td><input type="text" placeholder="통신판매업번호입력"/></td>
+                    <td><input type="text" name="e_commerce_registration" placeholder="통신판매업번호입력"/></td>
                 </tr>
                 <tr>
                     <th>전화번호</th>
-                    <td><input type="text" placeholder="전화번호입력"/></td>
+                    <td><input type="text" name="ph" placeholder="전화번호입력"/></td>
                 </tr>
                 <tr>
                     <th>팩스</th>
-                    <td><input type="text" placeholder="팩스번호입력"/></td>
+                    <td><input type="text" name="fax" placeholder="팩스번호입력"/></td>
                 </tr>
                 <tr>
                     <th>주소</th>
-                    <td><input type="text" placeholder="우편번호검색클릭"/>
+                    <td><input type="text" name=zip" placeholder="우편번호검색클릭"/>
                         <button class="infobutton" onclick="searchPostalCode()">주소검색</button><br/>
-                        <input type="text" id="address1" placeholder="기본주소입력" /><br/>
-                        <input type="text" id="address2" placeholder="상세주소입력" />
+                        <input type="text" id="address1" name=addr1" placeholder="기본주소입력" /><br/>
+                        <input type="text" id="address2" name=addr2" placeholder="상세주소입력" />
                     </td>
                 </tr>
             </table>
