--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -95,7 +95,6 @@
 
 <section class="section" th:fragment="list">
 
-
     <!-- 제목, 페이지 네비게이션 -->
     <nav class="section__nav">
         <h1>상품목록</h1>
@@ -108,7 +107,6 @@
     </nav>
 
     <!-- 정렬 메뉴 -->
-
     <ul class="sort">
         <li><a class="sort__link" href="#" onclick="sort('prodSold')"> 판매많은순</a></li>
         <li><a class="sort__link" href="#" onclick="sort('prodLowPrice')"> 낮은가격순</a></li>
@@ -118,140 +116,52 @@
         <li><a class="sort__link" href="#" onclick="sort('prodRdate')"> 최근등록순</a></li>
     </ul>
 
-
     <!-- 상품목록 -->
     <section class="productBox">
-        <div class="product">
-            <a th:href="@{/product/view}" class="product__link">
+        <div th:each="product : ${productsPage.content}" class="product">
+            <a th:href="@{/product/view/{id}(id=${product.id})}" class="product__link">
                 <div class="thumb">
                     <img class="thumb__img"
-                        src="https://thumbnail7.coupangcdn.com/thumbnails/remote/230x230ex/image/retail/images/3122239138972570-727d95de-ec33-4f85-99db-1a8720ff24f5.jpg"
-                        alt="t1" />
+                         th:src="${product.imageUrl}" alt="상품 이미지"/>
                 </div>
-
                 <div class="prodcut__desc">
-                    <h2>상품명</h2>
-                    <p>상품설명</p>
+                    <h2 th:text="${product.name}">상품명</h2>
+                    <p th:text="${product.description}">상품설명</p>
                 </div>
-
                 <div class="product__price-group">
                     <div class="org_price">
-                        <del class="org_price__prodPrice">12000</del>
-                        <span class="org_price__discount">10%↓</span>
+                        <del class="org_price__prodPrice" th:text="${product.price} + '원'">12000원</del>
+                        <span class="org_price__discount" th:text="${product.discountRate} + '%↓'">10%↓</span>
                     </div>
-
                     <div class="dis_price">
-                        <ins class="dis_price__result">10000원</ins>
-                        <span class="free free-delivery">무료배송</span>
-                        <!-- <span class="free" style="background-color: transparent; color: #111">배송비 :
-                                <span>1000원</span>
-                        </span> -->
+                        <ins class="dis_price__result" th:text="${product.discountedPrice} + '원'">10000원</ins>
+                        <span class="free free-delivery"  th:if="${product.deliveryFee == 0}">무료배송</span>
                     </div>
                 </div>
                 <div class="score_review">
                     <b>★ <span>4</span></b>
-                    <b>리뷰 <span>10</span></b>
-                    <span>고객만족우수</span>
-                </div>
-            </a>
-        </div>
-        <div class="product">
-            <a th:href="@{/product/view}" class="product__link">
-                <div class="thumb">
-                    <img class="thumb__img"
-                        src="https://thumbnail7.coupangcdn.com/thumbnails/remote/230x230ex/image/retail/images/3122239138972570-727d95de-ec33-4f85-99db-1a8720ff24f5.jpg"
-                        alt="t1" />
-                </div>
-
-                <div class="prodcut__desc">
-                    <h2>상품명</h2>
-                    <p>상품설명</p>
-                </div>
-
-                <div class="product__price-group">
-                    <div class="org_price">
-                        <del class="org_price__prodPrice">12000</del>
-                        <span class="org_price__discount">10%↓</span>
-                    </div>
-
-                    <div class="dis_price">
-                        <ins class="dis_price__result">10000원</ins>
-                        <!-- <span class="free free-delivery">무료배송</span> -->
-                        <span class="free" style="background-color: transparent; color: #111">배송비 :
-                                <span>1000원</span>
-                        </span>
-                    </div>
-                </div>
-                <div class="score_review">
-                    <b>★ <span>4</span></b>
-                    <b>리뷰 <span>10</span></b>
-                    <span>고객만족우수</span>
-                </div>
-            </a>
-        </div>
-        <div class="product">
-            <a th:href="@{/product/view}" class="product__link">
-                <div class="thumb">
-                    <img class="thumb__img"
-                        src="https://thumbnail7.coupangcdn.com/thumbnails/remote/230x230ex/image/retail/images/3122239138972570-727d95de-ec33-4f85-99db-1a8720ff24f5.jpg"
-                        alt="t1" />
-                </div>
-
-                <div class="prodcut__desc">
-                    <h2>상품명</h2>
-                    <p>상품설명</p>
-                </div>
-
-                <div class="product__price-group">
-                    <div class="org_price">
-                        <del class="org_price__prodPrice">12000</del>
-                        <span class="org_price__discount">10%↓</span>
-                    </div>
-
-                    <div class="dis_price">
-                        <ins class="dis_price__result">10000원</ins>
-                        <!-- <span class="free free-delivery">무료배송</span> -->
-                        <span class="free" style="background-color: transparent; color: #111">배송비 :
-                                <span>1000원</span>
-                        </span>
-                    </div>
-                </div>
-                <div class="score_review">
-                    <b>★ <span>4</span></b>
-                    <b>리뷰 <span>10</span></b>
-                    <span>고객만족우수</span>
+                    <b>리뷰 <span th:text="${product.views}">10</span></b>
+                    <span th:if="${product.sellerReputation}" th:text="${product.sellerReputation}">고객만족우수</span>
                 </div>
             </a>
         </div>
     </section>
 
-
     <!-- 상품목록 페이지번호 -->
     <div class="paging">
-        <span class="prev">
-            <a
-                href="#">
-                <&nbsp;이전</a>
+        <span class="prev" th:if="${!productsPage.isFirst}">
+            <a th:href="@{/product/list(page=${productsPage.currentPage - 1}, size=${productsPage.pageSize})}">
+                <&nbsp;이전
+            </a>
         </span>
-        <span class="paging__num">
-            <a href="#" >1</a>
+        <span class="paging__num" th:each="i : ${#numbers.sequence(1, productsPage.totalPages)}">
+            <a th:href="@{/product/list(page=${i - 1}, size=${productsPage.pageSize})}" th:text="${i}">1</a>
         </span>
-        <span class="paging__num">
-            <a href="#" >2</a>
-        </span>
-        <span class="paging__num">
-            <a href="#" >3</a>
-        </span>
-        <span class="paging__num">
-            <a href="#" >4</a>
-        </span>
-        <span class="paging__num">
-            <a href="#" >5</a>
-        </span>
-        <span class="next" >
-            <a href="#">다음&nbsp;></a>
+        <span class="next" th:if="${!productsPage.isLast}">
+            <a th:href="@{/product/list(page=${productsPage.currentPage + 1}, size=${productsPage.pageSize})}">
+                다음&nbsp;>
+            </a>
         </span>
     </div>
-
 </section>
-<!--내용 끝-->
+
